[tool.poetry]
name = "api"
version = "1.0.0"
description = ""
authors = ["kloeffler95 <kevin.loeffler@colorado.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
python-multipart = "^0.0.6"
scipy = "^1.10.1"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
opencv-python = "^4.7.0.72"
pillow = "^9.4.0"
torch = ">=1.13.1"
torchvision = {version = "^0.15.0.dev20230304+cpu", source = "pytorch"}
dlib = {git = "https://github.com/davisking/dlib.git"}
mmcv = "^1.7.1"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
pytest = "==3.4"
black = "^23.1.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/nightly/cpu/"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
